# imu_lidar_calibration

./: LICENSE  README.md
imuPacket/: CMakeLists.txt  package.xml
imuPacket/msg/: imuPacket.msg
linkalibr/: .gitignore  CMakeLists.txt  README.md  package.xml
linkalibr/data/: I_T_L_far.txt  I_T_L_far1.txt  I_T_L_final.txt  I_T_L_final_near2.txt  I_T_L_init.txt  I_T_L_init_far1.txt  I_T_L_init_far2.txt  I_T_L_init_near2.txt  I_T_L_wrong.txt  analyze_ITL.m  analyze_imu_data.m  analyze_lodom_data.m  compare_maps.m  lin_bias_far1_rawcloud.csv  lin_bias_far1_undistortedcloud.csv  lin_bias_undistortedcloud.csv  lin_calib_dt_far1_rawcloud.csv  lin_calib_dt_far1_undistortedcloud.csv  lin_calib_dt_undistortedcloud.csv  lin_calib_extrinsics_far1_rawcloud.csv  lin_calib_extrinsics_far1_undistortedcloud.csv  lin_calib_extrinsics_undistortedcloud.csv  lin_trajectory_far1_rawcloud.csv  lin_trajectory_far1_undistortedcloud.csv  lin_trajectory_undistortedcloud.csv  lin_velocity_far1_rawcloud.csv  lin_velocity_far1_undistortedcloud.csv  lin_velocity_undistortedcloud.csv  lo_trajectory_far1_rawcloud.csv  lo_trajectory_far1_undistortedcloud.csv  lo_trajectory_undistortedcloud.csv  plotBias.m  plotBias_distorted.m  plotBias_undistorted.m  plotCalib.m  plotCalibDistortedVsUnDistorted.m  plotCalib_distorted.m  plotCalib_undistorted.m  plotLOAMRawVsUndistortedTraj.m  plotLOAMTrajectoryRaw.m  (+11 more)
linkalibr/data/forOptimization/: analyze_batchoptimization_data.m  final_calib_csv.txt  imu_traj_reader.m  init_calib_csv.txt
linkalibr/data/results/mfi/compare/: lin_calib_extrinsics_far1_rawcloud.csv  lin_calib_extrinsics_near1_rawcloud.csv  plotCalib.m
linkalibr/data/results/mfi/distorted/VaryingCloudDensity/128Rings/far1/: I_T_L_far1.txt  lin_bias_far1_rawcloud.csv  lin_calib_dt_far1_rawcloud.csv  lin_trajectory_far1_rawcloud.csv  lin_velocity_far1_rawcloud.csv  lo_trajectory_far1.csv_rawcloud.csv  plotCalib_raw.m
linkalibr/data/results/mfi/distorted/VaryingCloudDensity/128Rings/far2/: I_T_L_far2.txt  lin_bias_far2_rawcloud.csv  lin_calib_dt_far2_rawcloud.csv  lin_calib_extrinsics_far2_rawcloud.csv  lin_trajectory_far2_rawcloud.csv  lin_velocity_far2_rawcloud.csv  lo_trajectory_far2_rawcloud.csv  plotBias_undistorted.m  plotCalib_undistorted.m
linkalibr/data/results/mfi/distorted/VaryingCloudDensity/128Rings/near1/: I_T_L_near1.txt  lin_bias_near1_rawcloud.csv  lin_calib_dt_near1_rawcloud.csv  lin_trajectory_near1_rawcloud.csv  lin_velocity_near1_rawcloud.csv  lo_trajectory_near1_rawcloud.csv  plotBias_undistorted.m  plotCalib_undistorted.m  plotTrajectory_undistorted.m
linkalibr/data/results/mfi/distorted/VaryingCloudDensity/128Rings/near2/: I_T_L_near2.txt  lin_bias_near2_rawcloud.csv  lin_calib_dt_near2_rawcloud.csv  lin_calib_extrinsics_near2_rawcloud.csv  lin_trajectory_near2_rawcloud.csv  lin_velocity_near2_rawcloud.csv  lo_trajectory_near2_rawcloud.csv  plotBias_undistorted.m  plotCalib_undistorted.m  plotTrajectory_undistorted.m  plotVelocity_undistorted.m
linkalibr/data/results/mfi/undistorted/VaryingCloudDensity/128Rings/Verification/: I_T_L_far2.txt  I_T_L_near1.txt
linkalibr/data/results/mfi/undistorted/VaryingCloudDensity/128Rings/far1/: I_T_L_far1.txt  lin_bias_far1_undistortedcloud.csv  lin_calib_dt_far1_undistortedcloud.csv  lin_calib_extrinsics_far1_undistortedcloud.csv  lin_trajectory_far1_undistortedcloud.csv  lin_velocity_far1_undistortedcloud.csv  lo_trajectory_far1_undistortedcloud.csv  plotTrajectory_undistorted.m
linkalibr/data/results/mfi/undistorted/VaryingCloudDensity/128Rings/far2/: lin_bias_far2_undistortedcloud.csv  lin_calib_dt_far2_undistortedcloud.csv  plotBias_undistorted.m  (+5 more)
linkalibr/launch/: external_test_init.launch  linkalibr_batchoptimization_ouster_vectornav.launch  linkalibr_ouster_vectornav.launch  ros_calib_init.launch  ros_calib_init_far1.launch  ros_calib_init_far2.launch  ros_calib_init_near1.launch  ros_calib_init_near2.launch  ros_imu_test.launch  ros_ndt_lodom.launch
linkalibr/launch/distorted/: linkalibr_ouster_vectornav_far1_distorted.launch  linkalibr_ouster_vectornav_far2_distorted.launch  linkalibr_ouster_vectornav_near1_distorted.launch  linkalibr_ouster_vectornav_near2_distorted.launch
linkalibr/launch/mapping/final_calib/: linkalibr_ouster_vectornav_far1_undistorted_mapping_final_calib.launch
linkalibr/launch/mapping/init_calib/: linkalibr_ouster_vectornav_far1_undistorted_mapping_init_calib.launch
linkalibr/launch/mapping/no_deskewing/: linkalibr_ouster_vectornav_far1_distorted_mapping.launch
linkalibr/launch/mapping/wrong_calib/: linkalibr_ouster_vectornav_far1_wrong_calib_mapping.launch
linkalibr/launch/undistorted/: linkalibr_ouster_vectornav_far1_undistorted.launch  linkalibr_ouster_vectornav_far2_undistorted.launch  linkalibr_ouster_vectornav_near1_undistorted.launch  linkalibr_ouster_vectornav_near2_undistorted.launch
linkalibr/src/: ros_batchoptimization.cpp  ros_calib_init.cpp  ros_calib_init_optimizer.cpp  ros_imu_test.cpp  ros_linkalibr_test.cpp  ros_ndt_lodom.cpp
linkalibr/src/batch_optimization/: BatchOptimizer.cpp  BatchOptimizer.h  LoadPriorKnowledge.cpp  LoadPriorKnowledge.h  PointToPlaneFactor.cpp  PointToPlaneFactor.h  PointToPlaneFactor2.cpp  PointToPlaneFactor2.h  PointToPlaneFactor3.cpp  PointToPlaneFactor3.h  PreIntegratedIMUMeasurements.h
linkalibr/src/core/: lincalibManager.cpp  lincalibManager.h  lincalibManagerOptions.h
linkalibr/src/init/: InertialInitializer.cpp  InertialInitializer.h
linkalibr/src/relpose/: relativePose.h
linkalibr/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
linkalibr/src/surfel_association/: SurfelAssociation.cpp  SurfelAssociation.h
linkalibr/src/track/: PlaneDetector.cpp  PlaneDetector.h  PlaneDetectorParams.h  lidarOdometry.cpp  lidarOdometry.h
linkalibr/src/types/: IMU.h  Pose.h  Quat.h  Type.h  Vec.h
linkalibr/src/update/: UpdaterLidarOdometry.cpp  UpdaterLidarOdometry.h  UpdaterOptions.h
linkalibr/src/utils/: color.h  eigen_utils.h  math_utils.h  parse_ros.h  pcl_utils.h  quat_ops.h
(+118 files in other folders)
