<?xml version="1.0"?>
<package>
    <!-- Package Information -->
    <name>linkalibr</name>
    <version>1.0.0</version>
    <description>
        Lidar-Inertial Calibration
    </description>

    <!-- Code Authors -->
    <author email="subodh514@tamu.edu">Subodh Mishra</author>
    <maintainer email="subodh514@tamu.edu">Subodh Mishra</maintainer>

    <!-- Licensing -->
    <license>GNU General Public License v3.0</license>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>ndt_omp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>imuPacket</build_depend>
    <!--<build_depend>pcl_ros</build_depend>-->

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>ndt_omp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>imuPacket</run_depend>
    <!--<run_depend>pcl_ros</run_depend>-->


</package>

